[package]
authors = ["HyperEntangledQubit <25336193+HyperEntangledQubit@users.noreply.github.com>"]
build = "build.rs"
categories = ["Rust bindings to macOS Monterey"]
license = "MIT License"
name = "monterey-rs"
readme = "./README.md"
repository = "https://github.com/HyperEntangledQubit/monterey-rs"
version = "0.1.0"
edition = "2021"

[build-dependencies]
version_check = "0.9.*"

[dependencies]
